--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^10.1.0",
     "react-select": "^5.7.4"
   },
   "devDependencies": {
