--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "firebase": "^10.1.0",
+    "react-javascript": "file:",
     "react-select": "^5.7.4"
   },
   "devDependencies": {
