--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase": "^10.1.0",
     "react-javascript": "file:",
+    "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4"
   },
   "devDependencies": {
